hero section complete

--- a/index.html
+++ b/index.html
@@ -1,24 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness - Redefine Yourself</title>
+    <!-- font awesome icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-        <header>
-            <nav>
-                <div class="brand"></div><!-- brand -->
-                <ul></ul>
+    <header>
+        <div class="container">
+            <nav class="flex">
+                <div class="brand"><a href="#">Fitness</a></div><!-- brand -->
+                <ul class="menu flex">
+                    <li><a href="#" class="active">home</a></li>
+                    <li><a href="#">services</a></li>
+                    <li><a href="#">contact</a></li>
+                    <li><a href="#">about</a></li>
+                </ul>
+                <!-- burger-menu -->
+                <a href="#" class="burger-menu"><svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                    <path
+                        d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z" />
+                </svg></a>
             </nav>
-            <div class="banner"></div><!-- banner -->
-        </header>
-        <main>
-            <section>
-            </section>
-        </main>
-        <footer></footer>
+            <div class="banner flex">
+                <div class="banner-content">
+                    <h1 class="banner-title">Get body in <span>shape</span> & stay healthy</h1>
+                    <p class="banner-text">A huge selection of health and fitness content, healthy recipes and
+                        transformation stories to help you get fit and stay
+                        fit!</p>
+                    <div class="banner-buttons">
+                        <a href="#" class="fit-btn">join club now</a>
+                        <a href="#" class="fit-btn fit-border-btn">download app</a>
+                    </div><!-- banner-buttons -->
+                </div><!-- banner-content -->
+                <div class="banner-img-wrap">
+                    <img src="images/Images 2.png" class="banner-img" alt="a male gym member with a dumbbell in his hand">
+                    <button class="top-badge">
+                        <div>
+                            <h4>500+</h4>
+                            <p>Free Workout Videos</p>
+                        </div>
+                    </button><!-- top-badge -->
+                    <button class="bottom-badge">
+                        <span></span>
+                        <div>
+                            <h5>350+</h5>
+                            <p>Video tutorial</p>
+                        </div>
+                    </button><!-- bottom-badge -->
+                </div><!-- banner-img-wrap -->
+            </div><!-- banner -->
+        </div><!-- container -->
+    </header>
+    <main>
+        <section>
+        </section>
+    </main>
+    <footer></footer>
 </body>
+
 </html>
