habit section complete

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness - Redefine Yourself</title>
     <!-- font awesome icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -23,10 +23,11 @@
                     <li><a href="#">about</a></li>
                 </ul>
                 <!-- burger-menu -->
-                <a href="#" class="burger-menu"><svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                    <path
-                        d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z" />
-                </svg></a>
+                <a href="#" class="burger-menu"><svg class="menu-icon" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 448 512">
+                        <path
+                            d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z" />
+                    </svg></a>
             </nav>
             <div class="banner flex">
                 <div class="banner-content">
@@ -40,7 +41,8 @@
                     </div><!-- banner-buttons -->
                 </div><!-- banner-content -->
                 <div class="banner-img-wrap">
-                    <img src="images/Images 2.png" class="banner-img" alt="a male gym member with a dumbbell in his hand">
+                    <img src="images/Images 2.png" class="banner-img"
+                        alt="a male gym member with a dumbbell in his hand">
                     <button class="top-badge">
                         <div>
                             <h4>500+</h4>
@@ -59,7 +61,37 @@
         </div><!-- container -->
     </header>
     <main>
+        <!-- habits section start -->
         <section>
+            <div class="container">
+                <div class="text-center">
+                    <h2>Change Your Habits</h2>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access
+                        to a gym.</p>
+                </div>
+                <div class="habits flex">
+                    <div class="single-habit habit-1">
+                        <div class="habit-img"></div><!-- habit-img -->
+                            <h6>Movement</h6>
+                            <p class="text-center">We believe fitness should be accessible to everyone</p>
+                    </div><!-- single-habit -->
+                    <div class="single-habit habit-2">
+                        <div class="habit-img"></div><!-- habit-img -->
+                            <h6>Time</h6>
+                            <p class="text-center">We believe fitness should be accessible to everyone</p>
+                    </div><!-- single-habit -->
+                    <div class="single-habit habit-3">
+                        <div class="habit-img"></div><!-- habit-img -->
+                            <h6>Practice</h6>
+                            <p class="text-center">We believe fitness should be accessible to everyone</p>
+                    </div><!-- single-habit -->
+                    <div class="single-habit habit-4">
+                        <div class="habit-img"></div><!-- habit-img -->
+                            <h6>Weight Loss</h6>
+                            <p class="text-center">We believe fitness should be accessible to everyone</p>
+                    </div><!-- single-habit -->
+                </div><!-- habits -->
+            </div><!-- container -->
         </section>
     </main>
     <footer></footer>
