cta section complete

--- a/index.html
+++ b/index.html
@@ -72,25 +72,44 @@
                 <div class="habits flex">
                     <div class="single-habit habit-1">
                         <div class="habit-img"></div><!-- habit-img -->
-                            <h6>Movement</h6>
-                            <p class="text-center">We believe fitness should be accessible to everyone</p>
+                        <h6>Movement</h6>
+                        <p class="text-center">We believe fitness should be accessible to everyone</p>
                     </div><!-- single-habit -->
                     <div class="single-habit habit-2">
                         <div class="habit-img"></div><!-- habit-img -->
-                            <h6>Time</h6>
-                            <p class="text-center">We believe fitness should be accessible to everyone</p>
+                        <h6>Time</h6>
+                        <p class="text-center">We believe fitness should be accessible to everyone</p>
                     </div><!-- single-habit -->
                     <div class="single-habit habit-3">
                         <div class="habit-img"></div><!-- habit-img -->
-                            <h6>Practice</h6>
-                            <p class="text-center">We believe fitness should be accessible to everyone</p>
+                        <h6>Practice</h6>
+                        <p class="text-center">We believe fitness should be accessible to everyone</p>
                     </div><!-- single-habit -->
                     <div class="single-habit habit-4">
                         <div class="habit-img"></div><!-- habit-img -->
-                            <h6>Weight Loss</h6>
-                            <p class="text-center">We believe fitness should be accessible to everyone</p>
+                        <h6>Weight Loss</h6>
+                        <p class="text-center">We believe fitness should be accessible to everyone</p>
                     </div><!-- single-habit -->
                 </div><!-- habits -->
+            </div><!-- container -->
+        </section>
+
+        <!-- cta section start -->
+        <section>
+            <div class="container">
+                <div class="cta-wrap flex">
+                    <div class="cta-content">
+                        <h2>Run an Extra Mile Easily</h2>
+                        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or
+                            access to a gym. With
+                            hundreds
+                            of professional workouts.</p>
+                            <a href="#" class="fit-btn">join now</a>
+                    </div><!-- cta-content -->
+                    <div class="cta-img">
+                        <img src="images/run.jpg" alt="a man running in the morning">
+                    </div><!-- cta-img -->
+                </div><!-- cta-wrap -->
             </div><!-- container -->
         </section>
     </main>
