team memebrs section complete

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
         <!-- habits section start -->
         <section>
             <div class="container">
-                <div class="text-center">
+                <div class="section-title">
                     <h2>Change Your Habits</h2>
                     <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access
                         to a gym.</p>
-                </div>
+                </div><!-- section-title -->
                 <div class="habits flex">
                     <div class="single-habit habit-1">
                         <div class="habit-img"></div><!-- habit-img -->
@@ -112,6 +112,55 @@
                 </div><!-- cta-wrap -->
             </div><!-- container -->
         </section>
+
+        <!-- team section start -->
+         <section>
+            <div class="container">
+                <div class="section-title">
+                    <h2>Meet Our Team</h2>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                </div><!-- section-title -->
+                <div class="team-members">
+                    <div class="single-member member-1">
+                        <div class="member-info">
+                            <h6>Jerome Bell</h6>
+                            <p>Trainer</p>
+                        </div><!-- member-info -->
+                    </div><!-- single-member -->
+                    <div class="single-member member-2">
+                        <div class="member-info">
+                            <h6>Jerome Bell</h6>
+                            <p>Trainer</p>
+                        </div><!-- member-info -->
+                    </div><!-- single-member -->
+                    <div class="single-member member-3">
+                        <div class="member-info">
+                            <h6>Jerome Bell</h6>
+                            <p>Trainer</p>
+                        </div><!-- member-info -->
+                    </div><!-- single-member -->
+                    <div class="single-member member-4">
+                        <div class="member-info">
+                            <h6>Jerome Bell</h6>
+                            <p>Trainer</p>
+                        </div><!-- member-info -->
+                    </div><!-- single-member -->
+                    <div class="single-member member-5">
+                        <div class="member-info">
+                            <h6>Jerome Bell</h6>
+                            <p>Trainer</p>
+                        </div><!-- member-info -->
+                    </div><!-- single-member -->
+                    <div class="single-member member-6">
+                        <div class="member-info">
+                            <h6>Jerome Bell</h6>
+                            <p>Trainer</p>
+                        </div><!-- member-info -->
+                    </div><!-- single-member -->
+                </div><!-- team-members -->
+              
+            </div><!-- container -->
+         </section>
     </main>
     <footer></footer>
 </body>
