footer section complete

--- a/index.html
+++ b/index.html
@@ -162,7 +162,37 @@
             </div><!-- container -->
          </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="footer-wrap flex">
+                <div class="brand-info">
+                    <h3>Fitness</h3>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds
+                    of professional workouts.</p>
+                </div><!-- brand-info -->
+                <div class="footer-menu-1">
+                    <h3>Get Started</h3>
+                    <ul>
+                        <li><a href="#">Service</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Affiliate Program</a></li>
+                        <li><a href="#">About US</a></li>
+                    </ul>
+                </div><!-- first-col -->
+                <div class="footer-menu-2">
+                    <h3>Get Started</h3>
+                    <ul>
+                        <li><a href="#">Fitness</a></li>
+                        <li><a href="#">Platform</a></li>
+                        <li><a href="#">Workout Library</a></li>
+                        <li><a href="#">App Design</a></li>
+                    </ul>
+                </div><!-- second-col -->
+            </div><!-- footer-wrap -->
+            <hr>
+            <p class="copyright">All right reserved @Fitness 2024</p>
+        </div><!-- container -->
+    </footer>
 </body>
 
 </html>
