menu wrap  border

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
         <div class="container">
             <nav class="flex-between">
                 <div class="brand"><a href="#">FitFusion</a></div><!-- brand -->
+           <div class="menu-wrap">
                 <ul class="menu flex">
                     <li><a href="#" class="active">home</a></li>
                     <li><a href="#">services</a></li>
                     <li><a href="#">contact</a></li>
                     <li><a href="#">about</a></li>
                 </ul>
+           </div>
                 <!-- burger-menu -->
                 <a href="#" class="burger-menu"><svg class="menu-icon" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 448 512">
