--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                 </div><!-- second-col -->
             </div><!-- footer-wrap -->
             <hr>
-            <p class="copyright">All right reserved @Fitness 2024</p>
+            <p class="copyright">All right reserved @FitFusion 2024</p>
         </div><!-- container -->
     </footer>
 </body>
